--- a/index.html
+++ b/index.html
@@ -33,5 +33,12 @@
 
             <a-camera gps-camera rotation-reader></a-camera>
         </a-scene>
+        <script>
+            // Workaround for an AR.js bug (https://github.com/jeromeetienne/AR.js/issues/410)
+            const sceneEl = document.querySelector('a-scene');
+            sceneEl.addEventListener('loaded', () => {
+              sceneEl.camera = new THREE.PerspectiveCamera();
+            });
+          </script>
     </body>
 </html>
