--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
-                    scale="0.9999998720575464 0.9999998720575464 0.9999998720575464"
-                    gps-entity-place="latitude: 39.128004; longitude: -77.242933;"
+                    scale="4 4 4"
+                    gps-entity-place="latitude: 39.128080; longitude: -77.243181;"
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
         </a-scene>
         <script>
             // Workaround for an AR.js bug (https://github.com/jeromeetienne/AR.js/issues/410)
-            const sceneEl = document.querySelector('a-scene');
-            sceneEl.addEventListener('loaded', () => {
-              sceneEl.camera = new THREE.PerspectiveCamera();
-            });
+            // const sceneEl = document.querySelector('a-scene');
+            // sceneEl.addEventListener('loaded', () => {
+            //   sceneEl.camera = new THREE.PerspectiveCamera();
+            // });
           </script>
     </body>
 </html>
